--- a/semana-2/css/style.css
+++ b/semana-2/css/style.css
@@ -45,7 +45,7 @@ main{
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding: 30px;
+    padding: 30px 80px;
     
 }
 
@@ -109,4 +109,32 @@ main{
     padding: 5px;
     border-radius: 16px;
 
+}
+
+.container-about-me{
+    display: flex;
+    justify-content: space-around;
+    padding: 30px 80px;
+}
+
+.container-about-me > div > img {
+    width: 300px;
+    height: 300px;
+    border-radius: 50%;
+}
+
+.mt-20{
+    margin-top: 20px;
+}
+
+.mb-20{
+    margin-bottom: 20px;
+}
+
+.container-about-me > div > h2 {
+    font-size: 48px;
+}
+
+.container-about-me > div > p {
+    color: rgba(255, 255, 255, 0.5);
 }
