--- a/semana-2/css/style.css
+++ b/semana-2/css/style.css
@@ -4,9 +4,13 @@
 }
 /* 1em = 16 px */
 body{
-    font-family: Helvetica, sans-serif;
+    font-family: "Roleway", sans-serif;
     background-color: #090E16;
     color: white;
+}
+
+.divider{
+    border: solid 0.5px rgba(123, 74, 226, 0.2);
 }
 
 nav{
@@ -109,6 +113,42 @@ main{
     padding: 5px;
     border-radius: 16px;
 
+}
+
+
+.container-cards{
+    display: flex;
+    justify-content: center;
+    /* border: solid red; */
+    margin-top: 60px;
+    margin-bottom: 20px;
+    gap: 70px;
+    
+
+}
+
+
+.container-cards > div {
+    text-align: center;
+    border: solid rgba(123, 74, 226, 0.5);
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    width: 246px;
+    height: 200px;
+    border-radius: 16px;
+
+}
+
+.container-cards > div > p{
+    font-weight: 300;
+    margin-top: 10px;
+}
+
+.container-cards > div > h5{
+    font-size: 32px;
+    font-weight: bold;
 }
 
 .container-about-me{
