--- a/semana-3/css/style.css
+++ b/semana-3/css/style.css
@@ -9,6 +9,15 @@ body{
 
 }
 
+.font-barlow{
+    font-family: "Barlow", sans-serif;
+    font-weight: 600;
+}
+
+.text-center{
+    text-align: center;
+}
+
 .nav{
     background-color: rgb(62, 190, 255) ;
     display: flex;
@@ -23,6 +32,11 @@ body{
     cursor: pointer;
 }
 
+.menu{
+    display: none;
+
+}
+
 main{
     background: url(../assets/mobile/image-header.jpg);
     background-repeat: no-repeat;
@@ -35,13 +49,125 @@ h1{
     color: #fff;
     text-align: center;
     text-transform: uppercase;
-    font-size: 70px;
-    padding-top: 100px;
+    font-size: 60px;
+    padding-top: 35px;
 }
 
 .arrow-down {
     display: block;
     margin: auto;
     height: 160px;
-    margin-top: 85px;
+    margin-top: 35px;
+}
+
+.bg-egg{
+    background: url(../assets/mobile/image-transform.jpg);
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: cover;/*foto agrende */
+    height: 50vh;
+}
+
+.container-egg{
+    height: 50vh;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    padding: 16px;
+}
+
+.container-egg > h2 {
+    font-size: 38px;
+    margin-bottom: 15px;
+
+}
+
+.container-egg > p {
+    font-size: 18px;
+    line-height: 1.5;
+    color: hsl(232, 10%, 55%);
+    
+}
+
+.link{
+    text-transform: uppercase;
+    margin-top: 20px;
+    display: block;
+    font-weight: bold;
+    color: black;
+    text-decoration: none;
+}
+
+@media (min-width: 640px){
+
+}
+
+@media (min-width: 768px){
+
+}
+
+@media (min-width: 1024px){
+
+}
+
+@media (min-width: 1280px){
+    main{
+        background: url("../assets/desktop/image-header.jpg");
+        background-repeat: no-repeat;
+        background-position: center;
+        background-size: cover;
+    }
+
+    .btn-menu{
+        display: none;
+    }
+
+    .menu{
+        display: flex;
+        gap: 25px;
+        align-items: center;
+        list-style: none;
+        font-family: "Barlow", sans-serif;
+    }
+
+    .menu > li > a {
+        text-decoration: none;
+        color: white;
+    }
+
+    .menu > li:last-child{
+        background-color: white;
+        padding: 10px 20px;
+        border-radius: 24px;
+    }
+
+    .menu > li:last-child >a{
+        color: black;
+        font-family: "Fraunces";
+        text-transform: uppercase;
+        font-weight: 600;
+        font-size: 14px;
+    }
+
+    .section-egg{
+        display: flex;
+        flex-direction: row-reverse;
+    }
+
+    .bg-egg{
+        width: 50%;
+        flex: 1;
+        height: 100%;
+    }
+
+    .container-egg{
+        flex: 1;
+        padding: 0;
+        height: 100%;
+    }
+
+}
+
+@media (min-width: 1536px){
+    
 }
