--- a/semana-2/css/style.css
+++ b/semana-2/css/style.css
@@ -138,7 +138,6 @@ main{
     width: 246px;
     height: 200px;
     border-radius: 16px;
-
 }
 
 .container-cards > div > p{
@@ -149,6 +148,49 @@ main{
 .container-cards > div > h5{
     font-size: 32px;
     font-weight: bold;
+}
+
+.container-cards > div:nth-child(2) {
+    background-color: rgba(123, 74, 226, 0.1);
+    border: none;
+}
+
+.description-cards{
+    /* border: solid red; */
+    display: flex;
+    justify-content: center;
+    gap: 70px;
+    background-color: rgba(123, 74, 226, 0.1);
+    width: 858px;
+    margin: auto;
+    padding: 20px;
+    /* margin-top: 40px; */
+    margin-bottom: 60px;
+    border-radius: 16px;
+    color: #7b4ae2 ;
+}
+
+.description-cards > div {
+    text-align: center;
+    /* border: solid rgba(123, 74, 226, 0.5); */
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    width: 246px;
+    /* height: 100px; */
+    
+}
+
+.description-cards > div > p{
+    font-weight: 300;
+    /* margin-top: 10px; */
+}
+
+.description-cards > div > h5{
+    font-size: 32px;
+    font-weight: bold;
+    
 }
 
 .container-about-me{
